--- a/package.json
+++ b/package.json
@@ -12,8 +12,20 @@
   },
   "dependencies": {
     "@line/bot-sdk": "^6.4.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "browserify": "^16.2.3",
     "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "gulp": "^4.0.0",
+    "material-ui": "^0.20.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "reactify": "^1.1.1",
+    "socket.io": "^2.2.0",
+    "vinyl-source-stream": "^2.0.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
