--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "material-ui": "^0.20.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-dropzone": "^8.0.3",
     "reactify": "^1.1.1",
     "socket.io": "^2.2.0",
     "vinyl-source-stream": "^2.0.0"
