--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "browserify": "^16.2.3",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "googleapi": "^1.0.2",
     "gulp": "^4.0.0",
     "material-ui": "^0.20.2",
     "react": "^16.7.0",
